@@ -1,5 +1,6 @@
 Change log 1.4 (under development)
 ----------------------------------
+* Fixed a bug in DeepCloner which caused a NullPointerException for arrays containing null values.
 
 Change log 1.3.7 (2010-03-22)
 -----------------------------
